--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel='icon' href='favicon.ico' type='image/x-icon'/ >
-
+  <link rel="shortcut icon" href="favicon.ico">
+  
     <title>Mirthun Online class</title>
 
     <!-- Bootstrap CSS -->
@@ -85,7 +86,7 @@
               <div class="icon">
                 <i class="lni-book"></i>
               </div>
-              <h3><a href="microsoft-edge:https://meet.google.com/ece-sbfy-bbv?pli=1&authuser=0">English</a></h3>
+              <h3><a href="https://meet.google.com/ece-sbfy-bbv?pli=1&authuser=0" target="_blank">English</a></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="300">
@@ -93,7 +94,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="microsoft-edge:https://meet.google.com/epe-wbgw-fxd?pli=1&authuser=0">Tamil</a></h3>
+              <h3><a href="https://meet.google.com/epe-wbgw-fxd?pli=1&authuser=0" target="_blank">Tamil</a></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -101,7 +102,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="microsoft-edge:https://meet.google.com/vow-upec-kxw?pli=1&authuser=0">Hindi</a></h3>
+              <h3><a href="https://meet.google.com/vow-upec-kxw?pli=1&authuser=0" target="_blank">Hindi</a></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -109,7 +110,7 @@
               <div class="icon">
                 <i class="lni-bulb"></i>
               </div>
-              <h3><a href="microsoft-edge:https://meet.google.com/edd-imzr-qxq?pli=1&authuser=0">Maths</a></h3>
+              <h3><a href=https://meet.google.com/edd-imzr-qxq?pli=1&authuser=0" target="_blank">Maths</a></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -117,7 +118,7 @@
               <div class="icon">
                 <i class="lni-brush"></i>
               </div>
-              <h3><a href="microsoft-edge:https://meet.google.com/cms-uiau-uye?pli=1&authuser=0">Art</a></h3>
+              <h3><a href="https://meet.google.com/cms-uiau-uye?pli=1&authuser=0" target="_blank">Art</a></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
