--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
 
-    <h5><b>Time dummy:</b></h5><h5 id="txt"></h5>
+    <h5><b>Time:</b></h5><h5 id="txt"></h5>
     <br><h5><b>Date:</b></h5>
     <h5 id="demo"></h5>
     <script>
