--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/epe-wbgw-fxd?pli=1&authuser=0" target="_blank">Tamil</a></h3>
+              <h3><a href="https://meet.google.com/epe-wbgw-fxd?pli=1&authuser=0" target="_blank">தமிழ்</a></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
