--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               Mirthun D
             </h1>
             <h3 class="subtitle">
-              I sr
+              Grade-I sr
             </h3>
           </div>            
         </div>
