--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               Mirthun D
             </h1>
             <h3 class="subtitle">
-              Grade - 1  sr
+              Grade 1  sr
             </h3>
           </div>            
         </div>
