--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/vow-upec-kxw?pli=1&authuser=0" target="_blank">हिन्दी</a></h3>
+              <h3><a href="https://meet.google.com/uuc-prxm-fai?pli=1&authuser=0" target="_blank">हिन्दी</a></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
