--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel='icon' href='favicon.ico' type='image/x-icon'/ >
   <link rel="shortcut icon" href="favicon.ico">
   
-    <title>Mirthun Online class</title>
+    <title>Mirthun Online class -1</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
