--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="icon">
                 <i class="lni-bulb"></i>
               </div>
-              <h3><a href=https://meet.google.com/edd-imzr-qxq?pli=1&authuser=0" target="_blank">Maths / Exam</a></h3>
+              <h3><a href=https://meet.google.com/edd-imzr-qxq?pli=1&authuser=0" target="_blank">Maths</a></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
