--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
           <div class="col-md-8 col-lg-8 col-xs-12 text-center">
             
             <h1 class="section-title">
-              Mirthun D
+              MIRTHUN D
             </h1>
             <h3 class="subtitle">
-              Grade 1  sr
+              <b>Grade 1  SR</b>
             </h3>
-            <br><h5  id="txt"><b> Time:</b>        
-              <h5 id="demo"><b>Date:</b></h5>
+            <br><h5  id="txt" class="subtitle"><b> Time:</b>        
+              <h5 id="demo" class="subtitle"><b>Date:</b></h5>
               <h5 id="demo" ></h5>
               <script>
                 var d = new Date();
                 document.getElementById("demo").innerHTML = d.toLocaleDateString();;
                 </script>
-              <h5 id="daydemo"><b>Day:</b></h5>
+              <h5 id="daydemo" class="subtitle"><b>Day:</b></h5>
               <h3 id="daydemo"></h2>
               <script>
                 var today = new Date();
@@ -165,7 +165,7 @@
             </div>
           </div>
         </div>
-      </div> V 1.4
+      </div> V 1.5
     </footer>
     <!-- Footer Section End -->
 
