--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-
+    <h3 style="color:blue;"><marquee behavior="scroll" direction="left">Annual Holidays started. Happy Holidays !!!</marquee></h3>
     <script>
       function startTime() {
         var today = new Date();
