--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/vpi-itoo-bak?pli=1&authuser=0" target="_blank">தமிழ்</a><p>vpi-itoo-bak</p></h3>
+              <h3><a href="https://meet.google.com/vpi-itoo-bak?pli=1&authuser=0" target="_blank">தமிழ் I</a><p>vpi-itoo-bak</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -131,7 +131,7 @@
               <div class="icon">
                 <i class="lni-brush"></i>
               </div>
-              <h3><a href="https://meet.google.com/cms-uiau-uye?pli=1&authuser=0" target="_blank">Art</a><p>cms-uiau-uye</p></h3>
+              <h3><a href="https://meet.google.com/yxp-yhnd-beo?pli=1&authuser=0" target="_blank">தமிழ் II</a><p>yxp-yhnd-beo</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
