--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
         <div class="row">
           <div class="col-md-12">
             <div class="footer-text text-center">
-              <p>Copyright © 2020 - 2021 | D S M </p>
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
+              <p>Copyright © 2020 - 2021 | D S M </p>
               
             </div>
           </div>
         </div>
-      </div> V 1.5
+      </div> 
     </footer>
     <!-- Footer Section End -->
-
+V 1.6
     <!-- Go to Top Link -->
     <a href="#" class="back-to-top">
       <i class="lni-chevron-up"></i>
