cloudinary image url

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <br><h2 class="section-title">
       Time Table
     </h2>
-    <br><img src="assets/img/time_table.jpg"  alt="assets/img/time_table-bu.jpg" class="center">
+    <br><img src="assets/img/time_table3.jpg"  alt="Not Found" onerror=this.src="https://res.cloudinary.com/pidile/image/upload/v1617929715/time_table.jpg" class="center">
 
 
      
