--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               MIRTHUN D
             </h1>
             <h3 class="subtitle">
-              <b>Grade II</b>
+              <b>Grade II APJ</b>
             </h3>
             <br><h5  id="txt" class="subtitle"><b> Time:</b>        
               <h5 id="demo" class="subtitle"><b>Date:</b></h5>
@@ -107,7 +107,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/vpi-itoo-bak?pli=1&authuser=0" target="_blank">தமிழ் I</a><p>vpi-itoo-bak</p></h3><h3><a href="https://meet.google.com/yxp-yhnd-beo?pli=1&authuser=0" target="_blank">தமிழ் II</a><p>yxp-yhnd-beo</p></h3>
+              <h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">தமிழ்</a></h3><h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">Test</a><p>ron-ivbo-gtc</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -123,7 +123,7 @@
               <div class="icon">
                 <i class="lni-bulb"></i>
               </div>
-              <h3><a href=https://meet.google.com/edd-imzr-qxq?pli=1&authuser=0" target="_blank">Maths</a><p>edd-imzr-qxq</p></h3>
+              <h3><a href=https://meet.google.com/jwc-amwx-wix?pli=1&authuser=0" target="_blank">Maths</a><p>jwc-amwx-wix</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -131,7 +131,7 @@
               <div class="icon">
                 <i class="lni-brush"></i>
               </div>
-              <h3><a href="https://meet.google.com/cms-uiau-uye?pli=1&authuser=0" target="_blank">Arts</a><p>cms-uiau-uye</p></h3>
+              <h3><a href="https://meet.google.com/pte-gxhc-nwf?pli=1&authuser=0" target="_blank">Games</a><p>pte-gxhc-nwf</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -148,7 +148,7 @@
     <br><h2 class="section-title">
       Time Table
     </h2>
-    <br><img src="assets/img/time_table3.jpg"  alt="Not Found" onerror=this.src="https://res.cloudinary.com/pidile/image/upload/v1617929715/time_table.jpg" class="center">
+    <br><img src="assets/img/time_table.jpg"  alt="Not Found" onerror=this.src="https://res.cloudinary.com/pidile/image/upload/v1617929715/time_table.jpg" class="center">
 
 
      
@@ -161,7 +161,7 @@
             <div class="footer-text text-center">
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
               <p>Copyright © 2020 - 2021 | D S M </p>
-              <p style="color:rgb(24, 24, 24);">V 1.7</p>
+              <p style="color:rgb(24, 24, 24);">V 1.8</p>
             </div>
           </div>
         </div>
