--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">தமிழ்</a></h3><h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">Test</a><p>ron-ivbo-gtc</p></h3>
+              <h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>ron-ivbo-gtc</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -161,7 +161,7 @@
             <div class="footer-text text-center">
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
               <p>Copyright © 2020 - 2021 | D S M </p>
-              <p style="color:rgb(24, 24, 24);">V 2.1</p>
+              <p style="color:rgb(24, 24, 24);">V 2.2</p>
             </div>
           </div>
         </div>
