--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="lni-menu"></span>
         <span class="lni-menu"></span>
       </button>
-      <a href="https://www.vivekamschoolcbse.edu.in" target="_blank class="navbar-brand"><img src="assets/img/vivekam6.png" width="200" height="50" align="right" alt=""></a>
+      <a href="https://www.vivekamschoolcbse.edu.in" target="_blank class="navbar-brand"><img src="assets/img/vivekam2.jpg" width="200" height="50" align="right" alt=""></a>
 
 
     
@@ -148,7 +148,7 @@
     <br><h2 class="section-title">
       Time Table
     </h2>
-    <br><img src="assets/img/time_table.jpg"  alt="Not Found" onerror=this.src="https://res.cloudinary.com/pidile/image/upload/v1623662723/time_table.jpg" class="center">
+    <br><img src="https://res.cloudinary.com/pidile/image/upload/v1623662723/time_table.jpg"  alt="Not Found" onerror=this.src="assets/img/vivekam2.jpg" class="center">
 
 
      
@@ -161,7 +161,7 @@
             <div class="footer-text text-center">
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
               <p>Copyright © 2020 - 2021 | D S M </p>
-              <p style="color:rgb(24, 24, 24);">V 2.3</p>
+              <p style="color:rgb(24, 24, 24);">V 2.4</p>
             </div>
           </div>
         </div>
