--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="lni-menu"></span>
         <span class="lni-menu"></span>
       </button>
-      <a href="https://www.vivekamschoolcbse.edu.in" target="_blank class="navbar-brand"><img src="assets/img/vivekam6.png" width="200" height="50" align="right" alt=""></a>
+      <a href="https://www.vivekamschoolcbse.edu.in" target="_blank class="navbar-brand"><img src="assets/img/vivekam2.jpg" width="200" height="50" align="right" alt=""></a>
 
 
     
@@ -161,7 +161,7 @@
             <div class="footer-text text-center">
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
               <p>Copyright © 2020 - 2021 | D S M </p>
-              <p style="color:rgb(24, 24, 24);">V 2.3</p>
+              <p style="color:rgb(24, 24, 24);">V 2.7</p>
             </div>
           </div>
         </div>
