--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W07SSNSJBQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-W07SSNSJBQ');
+  </script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -139,7 +148,7 @@
               <div class="icon">
                 <i class="lni-book"></i>
               </div>
-              <h3><a href="https://vivekamcbse.meandmyschool.in/" target="_blank" >Me & My School</a></h3>
+              <h3><a href="https://vivekamcbse.meandmyschool.in/" target="_blank" >Me & My School</a><p>vivekamcbse.meandmyschool.in</p></h3>
             </div>
           </div>
          </div>
@@ -161,7 +170,7 @@
             <div class="footer-text text-center">
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
               <p>Copyright © 2020 - 2021 | D S M </p>
-              <p style="color:rgb(24, 24, 24);">V 2.7</p>
+              <!-- <p style="color:rgb(24, 24, 24);">V 2.9</p> -->
             </div>
           </div>
         </div>
