--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="icon">
                 <i class="lni-book"></i>
               </div>
-              <h3><a href="https://meet.google.com/pte-gxhc-nwf?pli=1&authuser=0" target="_blank">Games</a><p>pte-gxhc-nwf</p></h3>
+              <h3><a href="https://meet.google.com/iuf-ftrz-wfh?pli=1&authuser=0" target="_blank">English</a><p>iuf-ftrz-wfh</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="300">
@@ -116,7 +116,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/fgb-axtk-ibn?pli=1&authuser=0" target="_blank">हिन्दी</a><p>fgb-axtk-ibn</p></h3>
+              <h3><a href="https://meet.google.com/bff-vtau-cmg?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>bff-vtau-cmg</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -124,7 +124,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://vivekamcbse.meandmyschool.in/" target="_blank" >Me & My School</a><p>vivekamcbse.meandmyschool.in</p></h3>
+              <h3><a href=https://meet.google.com/bbj-beim-eny?pli=1&authuser=0" target="_blank">Maths</a><p>bbj-beim-eny</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -132,7 +132,7 @@
               <div class="icon">
                 <i class="lni-bulb"></i>
               </div>
-              <h3><a href="https://meet.google.com/iuf-ftrz-wfh?pli=1&authuser=0" target="_blank">English</a><p>iuf-ftrz-wfh</p></h3>
+              <h3><a href="https://meet.google.com/ega-xiwf-mgv?pli=1&authuser=0" target="_blank">हिन्दी</a><p>ega-xiwf-mgv</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -140,7 +140,7 @@
               <div class="icon">
                 <i class="lni-brush"></i>
               </div>
-              <h3><a href=https://meet.google.com/jwc-amwx-wix?pli=1&authuser=0" target="_blank">Maths</a><p>jwc-amwx-wix</p></h3>
+              <h3><a href="https://meet.google.com/vir-phws-egw?pli=1&authuser=0" target="_blank">Games</a><p>vir-phws-egw</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -148,7 +148,7 @@
               <div class="icon">
                 <i class="lni-book"></i>
               </div>
-              <h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>ron-ivbo-gtc</p></h3>
+              <h3><a href="https://vivekamcbse.meandmyschool.in/" target="_blank" >Me & My School</a><p>vivekamcbse.meandmyschool.in</p></h3>
             </div>
           </div>
          </div>
