--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/bff-vtau-cmg?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>bff-vtau-cmg</p></h3>
+              <h3><a href="https://meet.google.com/rru-xrbi-qut?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>rru-xrbi-qut</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -124,7 +124,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href=https://meet.google.com/bbj-beim-eny?pli=1&authuser=0" target="_blank">Maths</a><p>bbj-beim-eny</p></h3>
+              <h3><a href=https://meet.google.com/wuu-tsui-jkt?pli=1&authuser=0" target="_blank">Maths</a><p>wuu-tsui-jkt</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
