--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="col-md-8 col-lg-8 col-xs-12 text-center">
             
             <h1 class="section-title">
-              MIRTHUN
+              MIRTHUN D
             </h1>
             <h3 class="subtitle">
               <b>Grade II APJ</b>
