--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="icon">
                 <i class="lni-book"></i>
               </div>
-              <h3><a href="https://meet.google.com/iuf-ftrz-wfh?pli=1&authuser=0" target="_blank">English</a><p>iuf-ftrz-wfh</p></h3>
+              <h3><a href="https://meet.google.com/mjg-gmyb-obx?pli=1&authuser=0" target="_blank">English</a><p>mjg-gmyb-obx</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="300">
