index.html edited online with Bitbucket

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>          
         </div>
         
-        <h3 style="color:blue;"><marquee behavior="scroll" direction="left">Annual Holidays started. Happy Holidays !!!</marquee></h3>
+        <h3 style="color:blue;"><marquee behavior="scroll" direction="left"!!! Happy Holidays !!!</marquee></h3>
 
      
 
